messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-web-green
  template:
    metadata:
      labels:
        app: django-web-green
    spec:
      containers:
        - name: django-web-green
          image: dokerfixer/django-messaging-app:v2
          command: ["/bin/sh", "-c"]
          args:
            - sleep 10 &&
              python manage.py migrate &&
              python manage.py collectstatic --noinput --clear &&
              python manage.py runserver 0.0.0.0:8000
          ports:
            - containerPort: 8000
